--- a/Index.html
+++ b/Index.html
@@ -3,13 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>meu portfólio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
-<body class="text-center bg-dark text-white">
-    <h2>Eu sou o Rafael</h2>
+<body class="text-center container bg-dark text-white">
+    <h2 class="lead">Eu sou o Rafael</h2>
     <h1>Eu sou feliz</h1>
     <p>Eu não gosto dos meus amigos</p>
+    <p>minhas habilidades</p>
+ 
+    <div>
+        <p class="badge bg-secondary">Ser feliz</p>
+        <p class="badge bg-secondary">Pvp player do minecraft</p>
+        <p class="badge bg-secondary">Dormir</p>
+        <p class="badge bg-secondary">Lenda no blood</p>
+    </div>
 </body>
 </html>
