--- a/index.html
+++ b/index.html
@@ -19,5 +19,30 @@
         <p class="badge bg-secondary">Dormir</p>
         <p class="badge bg-secondary">Lenda no blood</p>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<footer class="container py-5">
+    <h2>Entre em contato</h2>
+    <a href="">GitHub</a>
+    <p class="my-5 text-center">&copy Copyright. Criado por Rafael</p>
+</footerr>
+
 </body>
 </html>
