--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
-<body class="text-center container bg-dark text-white">
+<body class="container bg-dark text-white">
+    <header class="text-center">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqXYJZOe_iJucIqLuzAsQoolkseWHdvhQcPA&s" alt="" class="rounded-circle" height="200">
     <h2 class="lead">Eu sou o Rafael</h2>
     <h1>Eu sou feliz</h1>
     <p>Eu não gosto dos meus amigos</p>
@@ -19,28 +21,26 @@
         <p class="badge bg-secondary">Dormir</p>
         <p class="badge bg-secondary">Lenda no blood</p>
     </div>
+</header>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  <main class="container">
+     <h2>Meus projetos</h2>
+      <div class="row">
+        <div class="col-md-4">
+            <div class="card" style="width: 18rem;">
+                <img src="https://i.pinimg.com/474x/1c/71/fd/1c71fdf1b874524c457fba81fe2c4f08.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">xuiter</h5>
+                  <p class="card-text">é um aplicativo onde vc pode interagir com varias pessoas com variados assuntos.</p>
+                  <a href="https://www.figma.com/design/xt4YocpywXPz6HeseL93zi/xuiter-mat-2?node-id=0-1&p=f&t=LhxA5ajwBe14TBeK-0" class="btn btn-primary">clique para ir para a pagina  </a>
+                </div>
+              </div>
+        </div>
+      </div>
 
 <footer class="container py-5">
     <h2>Entre em contato</h2>
-    <a href="">GitHub</a>
+    <a href="https://github.com/RafaelVilabela/Meu-portfolio-338">GitHub</a>
     <p class="my-5 text-center">&copy Copyright. Criado por Rafael</p>
 </footerr>
 
