--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
                 </div>
               </div>
         </div>
+         <div class="col-md-4">
+            <div class="card" style="width: 18rem;">
+                <img src="https://newr7-r7-prod.web.arc-cdn.net/resizer/v2/LSAGMCSB6ZPCRJ4TCM3UR4CM3I.jpg?auth=0d6805c0c9558a60b0db2fb602c109530714980ef82f46e4ee2ac7c832a1fc8e&width=710&height=550" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Projeto fim do mundo</h5>
+                  <p class="card-text">um trabalho apresentado em sala sobre possiveis coisas que vão acabar com o mundo.</p>
+                  <a href="https://www.canva.com/design/DAGjTPvNTTs/pYQ1E7HRwlAgGevvCyjCMA/edit?utm_content=DAGjTPvNTTs&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="btn btn-primary">clique para ir para a pagina  </a>
+                </div>
+              </div>
+        </div>
       </div>
 
 <footer class="container py-5">
